--- a/ElevenNote.WebAPI/ElevenNote.WebAPI.csproj
+++ b/ElevenNote.WebAPI/ElevenNote.WebAPI.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NoteController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -315,9 +316,9 @@
       <Project>{927fc54b-48cc-4edc-bd42-d6da885edfaa}</Project>
       <Name>ElevenNote.Models</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Services\Services.csproj">
+    <ProjectReference Include="..\Services\ElevenNote.Services.csproj">
       <Project>{729df9b7-7d50-4513-b1d5-3440477ff295}</Project>
-      <Name>Services</Name>
+      <Name>ElevenNote.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
